# computer-use-qa-mcp

./: .gitignore  LICENSE  README.md  demo_overlay.py  mcp_config_example.json  pyproject.toml  server.py  test_example.py
.github/workflows/: python-publish.yml
computer_use_demo/: loop.py
computer_use_demo/tools/: base.py  bash.py  computer.py  overlay.py
computer_use_qa_mcp/: server.py
examples/: 1_sample.md  langwatch_blog.md
tests/: test_example.py
