[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "computer-use-qa-mcp"
version = "0.1.1"
description = "MCP server for computer use quality assurance using Claude"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anthropic[bedrock,vertex]>=0.37.1",
    "mcp[cli]>=1.12.2",
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
]

[project.scripts]
computer-use-qa-mcp = "computer_use_qa_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/computer-use-qa-mcp"
Repository = "https://github.com/yourusername/computer-use-qa-mcp"
